--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,26 @@
 # Site
-name: "tannguyen"
-title: "Tan Nguyen Blog"
-description: "Wellcome to tannguyen blog"
-meta_description: "Wellcome to tannguyen blog"
+name: "HoangTu"
+title: "HoangTu Blog"
+description: "Wellcome to HoangTu blog"
+meta_description: "Wellcome to HoangTu blog"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
 google_analytics: 'UA-46278016-1'
-disqus: 'https-tannguyenit-github-io'
+disqus: 'https-nghti-github-io'
 mailchimp-list: ''
 include: ["_pages"]
 permalink: /:title/
 
 # Authors
 authors:
-  tannguyen:
-    name: tannguyen
-    display_name: tannguyen
+  nghti:
+    name: nghti
+    display_name: nghti
     gravatar: 817789f985a387521d6ec4d5a18137c1
-    email: tannguyenit95@gmail.com
-    web: tannguyenit.github.io
-    twitter: https://twitter.com/tannguyenit1995
+    email: nghti8020@gmail.com
+    web: nghti.github.io
+    twitter: https://twitter.com/nghti8020
     description: "I'am developer"
 # Plugins
 plugins: 
